<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_2">


    <TextView
        android:id="@+id/heading"
        style="@style/Widget.TwoPlayerGame.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/game1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1"
        style="@style/Widget.TwoPlayerGame.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/player1"
        app:layout_constraintBottom_toTopOf="@id/image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/player2"
        style="@style/Widget.TwoPlayerGame.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/player2"
        app:layout_constraintBottom_toTopOf="@id/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintVertical_bias="0.76" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="165dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/dice_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="165dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/dice_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/winner"
        style="@style/Widget.TwoPlayerGame.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        app:layout_constraintBottom_toTopOf="@id/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1" />

    <Button
        android:id="@+id/roll"
        style="@style/Widget.TwoPlayerGame.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1" />

</androidx.constraintlayout.widget.ConstraintLayout>